<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_order"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_services"
            android:title="@string/menu_services" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contactus"
                android:icon="@drawable/ic_contactus"
                android:title="@string/menu_contactus" />

        </menu>
    </item>

</menu>
